resource section main table mapgroup data

--- a/nextgisweb/resource/nodepkg/resource-section/main/ResourceSectionMain.less
+++ b/nextgisweb/resource/nodepkg/resource-section/main/ResourceSectionMain.less
@@ -43,6 +43,10 @@ dl.ngw-resource-main-section-summary {
     &:hover {
         box-shadow: 0 0 5px 0 var(--divider-color);
     }
+
+    .ant-empty-normal {
+        margin-block: 0;
+    }
 }
 
 .map-link {
@@ -53,4 +57,11 @@ dl.ngw-resource-main-section-summary {
     &:hover {
         box-shadow: 0 0 5px 0 var(--divider-color);
     }
+}
+
+.ellipsis {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    display: contents;
 }
