complex tree icon style

--- a/nextgisweb/gui/nodepkg/focus-table/ComplexTree.less
+++ b/nextgisweb/gui/nodepkg/focus-table/ComplexTree.less
@@ -2,6 +2,12 @@
     overflow-x: hidden;
     overflow-y: auto;
 
+    .arrow-style {
+        font-size: 16px;
+        gap: 10px;
+        display: flex;
+    }
+
     >table {
         border-collapse: separate;
         border-spacing: 0;
