icon folder complextree and layertree webmap

--- a/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
@@ -165,7 +165,7 @@
 
 .ant-tree .ant-tree-node-content-wrapper .ant-tree-iconEle {
     font-size: 24px;
-    color: #106a90;
+    color: var(--primary);
     width: 24px;
     height: 24px;
     display: flex;
@@ -186,7 +186,7 @@
 .more,
 .legend {
     font-size: 18px;
-    color: #106a90;
+    color: var(--primary);
     width: 24px;
     height: 24px;
     display: flex;
