api update for mapgroup widget, settings complextree icon style

--- a/nextgisweb/gui/nodepkg/focus-table/ComplexTree.less
+++ b/nextgisweb/gui/nodepkg/focus-table/ComplexTree.less
@@ -72,6 +72,26 @@
                                 color: var(--color-primary);
                             }
 
+                            &>div.title-webmap {
+                                color: var(--color-primary);
+                                display: flex;
+                                justify-content: space-between;
+
+                                &>span.icon-disable {
+                                    color: var(--danger);
+                                }
+
+                                &>span.icon-enable {
+                                    color: var(--color-primary);
+                                }
+                            }
+
+                            &>div.title-webmap-disable {
+                                display: flex;
+                                justify-content: space-between;
+                                color: var(--danger);
+                            }
+
                             &>span.custom-detail {
                                 min-width: 24px;
                                 display: flex;
