test home page and mapgroup

--- a/nextgisweb/gui/nodepkg/focus-table/ComplexTree.less
+++ b/nextgisweb/gui/nodepkg/focus-table/ComplexTree.less
@@ -68,28 +68,12 @@
                                 text-overflow: ellipsis;
                             }
 
-                            &>div.layer-color {
-                                color: var(--color-primary);
-                            }
-
-                            &>div.title-webmap {
-                                color: var(--color-primary);
-                                display: flex;
-                                justify-content: space-between;
-
-                                &>span.icon-disable {
-                                    color: var(--danger);
-                                }
-
-                                &>span.icon-enable {
-                                    color: var(--color-primary);
-                                }
-                            }
-
-                            &>div.title-webmap-disable {
-                                display: flex;
-                                justify-content: space-between;
+                            &>div.icon-disable {
                                 color: var(--danger);
+                                min-width: 24px;
+                                padding-inline-start: 0;
+                                padding-inline-end: 0;
+                                border-radius: 50%;
                             }
 
                             &>span.custom-detail {
