--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -107,6 +107,15 @@ input {
 		font-size: 14px;
 		align-items: center;
 		justify-content: center;
+		padding: 0 5px;
+	}
+
+	.icon-disable-menu {
+		display: flex;
+		font-size: 14px;
+		align-items: center;
+		justify-content: center;
+		padding: 0;
 	}
 
 	a {
@@ -316,6 +325,7 @@ input {
 									display: -webkit-box;
 									-webkit-box-orient: vertical;
 									height: 45px;
+									text-align: center;
 								}
 
 								.ant-empty-normal {
@@ -324,11 +334,8 @@ input {
 								}
 
 								.disabled-title {
-									position: absolute;
-									bottom: 0;
 									color: #ff0000;
 									font-weight: 600;
-									background: rgba(255, 255, 255, 0.9);
 								}
 							}
 
@@ -443,7 +450,7 @@ input {
 														-webkit-line-clamp: 3;
 														display: -webkit-box;
 														-webkit-box-orient: vertical;
-														padding: 0 10px;
+														padding: 0 16px;
 													}
 												}
 
@@ -499,6 +506,29 @@ input {
 	}
 }
 
+.drag-title {
+	width: 100%;
+	position: absolute;
+	top: 0;
+	bottom: 40px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	.title {
+		font-size: 16px;
+		overflow: hidden;
+		white-space: initial;
+		text-overflow: ellipsis;
+		line-height: 20.7px;
+		text-align: center;
+		letter-spacing: normal;
+		-webkit-line-clamp: 2;
+		display: -webkit-box;
+		-webkit-box-orient: vertical;
+		padding: 0 16px;
+	}
+}
 
 input::-webkit-input-placeholder,
 textarea::-webkit-input-placeholder {
