test group-management component

--- a/nextgisweb/mapgroup/nodepkg/group-management/GroupManagement.less
+++ b/nextgisweb/mapgroup/nodepkg/group-management/GroupManagement.less
@@ -1,8 +1,7 @@
-.ellipsis-button-text {
-    span {
-        overflow: hidden;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-        display: contents;
+.mapgroup-component {
+    .create-group {
+        display: inline-flex;
+        align-items: center;
+        padding: 5px 0;
     }
 }
