test group-management component

--- a/nextgisweb/mapgroup/nodepkg/group-management/GroupManagement.less
+++ b/nextgisweb/mapgroup/nodepkg/group-management/GroupManagement.less
@@ -4,4 +4,9 @@
         align-items: center;
         padding: 5px 0;
     }
+
+    .control-button {
+        display: flex;
+        justify-content: center;
+    }
 }
