test add group home page

--- a/nextgisweb/mapgroup/nodepkg/group-management/GroupManagement.less
+++ b/nextgisweb/mapgroup/nodepkg/group-management/GroupManagement.less
@@ -2,11 +2,14 @@
     .create-group {
         display: inline-flex;
         align-items: center;
-        padding: 5px 0;
     }
 
     .control-button {
         display: flex;
         justify-content: center;
+    }
+
+    .tag-item {
+        display: inline-flex;
     }
 }
