--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -27,6 +27,17 @@ input {
 		left: 0;
 	}
 
+	.create-group {
+		padding: 5px;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.create-group-menu {
+
+	}
+
 	.ant-btn-color-link.ant-btn-variant-link {
 		border: 1px dotted black;
 
@@ -143,7 +154,7 @@ input {
 				display: flex;
 				justify-content: space-between;
 				padding: 5px;
-				margin: 8px 0;
+				margin: 8px 0 0 0;
 
 				.search {
 					max-width: 500px;
@@ -220,7 +231,7 @@ input {
 			}
 
 			.menu-maps {
-				margin: 8px 0 24px 0;
+				margin: 0 0 24px 0;
 				display: flex;
 
 				.menu-list {
