--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -31,11 +31,8 @@ input {
 		padding: 5px;
 		display: flex;
 		flex-direction: column;
-		align-items: center;
-	}
-
-	.create-group-menu {
-
+		align-items: flex-start;
+		max-width: 500px;
 	}
 
 	.ant-btn-color-link.ant-btn-variant-link {
@@ -643,4 +640,27 @@ div:has(> .upload-footer) {
 
 .content {
 	width: 100%;
+}
+
+
+.mapgroup-modal.ant-modal {
+    margin: 1em;
+    padding: 0;
+    width: 60%;
+    min-width: 40em;
+    max-width: 80em;
+    height: 80%;
+    min-height: 40em;
+
+    > div {
+        height: 100%;
+
+        > .ant-modal-content {
+            height: 100%;
+
+            > .ant-modal-body {
+                height: 100%;
+            }
+        }
+    }
 }
