test mapgroup and home page...

--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -665,6 +665,12 @@ div:has(> .upload-footer) {
 	height: 80%;
 	min-height: 40em;
 
+	.ant-modal-footer {
+		position: absolute;
+		right: 24px;
+		bottom: 20px;
+	}
+
 	>div {
 		height: 100%;
 
