mapgroup test home page

--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -8,10 +8,6 @@ input {
 	white-space: nowrap;
 }
 
-:root {
-	--primary: #2a388c;
-}
-
 .ngw-gui-react-boot {
 	height: 100% !important;
 }
@@ -185,7 +181,7 @@ input {
 					}
 
 					.ant-input-affix-wrapper {
-						border-image: linear-gradient(0.25turn, #2a388c80, #2a388c80, #2a388c00);
+						border-bottom-color: var(--primary);
 						border-image-slice: 1;
 						border-bottom-style: solid !important;
 						border-style: none;
