--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -227,18 +227,16 @@ input {
 			}
 
 			.menu-maps {
-				margin: 0 0 24px 0;
+				margin: 24px 0;
 				display: flex;
 
 				.menu-list {
-					max-width: 280px;
 					min-height: 350px;
 					padding: 5px;
 
 					.dnd-container-menu {
 						display: flex;
 						flex-direction: column;
-						max-width: 280px;
 
 						.edit-group {
 							display: flex;
@@ -300,7 +298,7 @@ input {
 
 				.content-maps-grid {
 					width: 100%;
-					padding: 5px;
+					padding: 3px;
 
 					.dnd-container-maps {
 						display: flex;
@@ -316,7 +314,7 @@ input {
 							display: grid;
 							justify-items: center;
 							margin-top: 5px;
-							gap: 50px 9px;
+							gap: 50px 4px;
 
 							.drag-item {
 								box-sizing: border-box;
