--- a/nextgisweb/webmap/nodepkg/panel/selected-feature/SelectedFeature.less
+++ b/nextgisweb/webmap/nodepkg/panel/selected-feature/SelectedFeature.less
@@ -20,6 +20,38 @@
                 color: var(--text-base);
             }
         }
+
+        .icon-symbol {
+            font-size: 16px;
+            width: 24px;
+            height: 24px;
+            display: flex;
+            justify-items: center;
+            justify-content: center;
+            align-items: center;
+            flex: 0 0 auto;
+            margin: 0;
+            cursor: pointer;
+            color: var(--text-base);
+            z-index: 1000;
+            border-radius: 4px;
+            border: none;
+            background-color: #fff;
+            box-sizing: border-box;
+            margin-inline-start: 0;
+            padding: 0;
+
+            svg.icon {
+                margin-right: 0;
+            }
+
+            &:hover {
+                background-color: #00000010;
+                color: var(--primary) !important;
+                border-radius: 4px;
+                border: none;
+            }
+        }
     }
 
     .row-selected {
@@ -50,6 +82,7 @@
                 height: 10px;
                 background-color: var(--text-secondary);
                 clip-path: circle(2px);
+                gap: 5px;
             }
 
             .label {
