settings style home page

--- a/nextgisweb/resource/nodepkg/home-page/component/Header.less
+++ b/nextgisweb/resource/nodepkg/home-page/component/Header.less
@@ -194,3 +194,13 @@
 .ant-modal {
 	top: 50px;
 }
+
+.ant-menu-submenu-popup>.ant-menu .ant-menu-item {
+	border-radius: 3px;
+}
+
+.ant-menu-submenu-popup .ant-menu-vertical .ant-menu-item {
+	margin-inline: 1px;
+	margin-block: 1px;
+	width: calc(100% - 2px);
+}
