test mapgroup home page

--- a/nextgisweb/resource/nodepkg/home-page/component/Header.less
+++ b/nextgisweb/resource/nodepkg/home-page/component/Header.less
@@ -1,8 +1,16 @@
 .control-component {
 	justify-content: flex-end;
 	display: flex;
+	position: absolute;
+	bottom: 16px;
+	right: 16px;
 }
 
+.content-body {
+	display: flex;
+	justify-content: space-between;
+	height: 100%;
+}
 
 .header-home-page {
 	padding: 0 10%;
