--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -227,7 +227,7 @@ input {
 			}
 
 			.menu-maps {
-				margin: 24px 0;
+				margin: 0px 0 24px 0;
 				display: flex;
 
 				.menu-list {
@@ -647,13 +647,6 @@ div:has(> .upload-footer) {
 
 
 .mapgroup-modal.ant-modal {
-	margin: 1em;
-	padding: 0;
-	width: 60%;
-	min-width: 40em;
-	max-width: 80em;
-	height: 80%;
-	min-height: 40em;
 
 	.ant-modal-footer {
 		position: absolute;
