--- a/nextgisweb/webmap/nodepkg/panel/selected-feature/SelectedFeature.less
+++ b/nextgisweb/webmap/nodepkg/panel/selected-feature/SelectedFeature.less
@@ -75,6 +75,7 @@
             margin: 5px 0;
             width: 100%;
             justify-content: space-between;
+            gap: 2px;
 
             .index-lf {
                 width: 10px;
