description component link to feature and raster...

--- a/nextgisweb/resource/nodepkg/description/DescComponent.less
+++ b/nextgisweb/resource/nodepkg/description/DescComponent.less
@@ -8,6 +8,8 @@
 		white-space: normal;
 		overflow-wrap: break-word;
 		cursor: pointer;
+		padding: 3px 7px;
+		border-radius: 3px;
 
 		&:hover {
 			color: var(--primary);
