folder layer tree, legend style, color selected feature component style

--- a/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
@@ -167,7 +167,9 @@
     flex: 0 0 auto;
 }
 
-
+.margin-legend {
+    margin: 0 4px 0 0;
+}
 
 .ant-tree .ant-tree-node-content-wrapper .ant-tree-iconEle,
 .ant-tree .ant-tree-checkbox+span .ant-tree-iconEle {
