--- a/nextgisweb/webmap/nodepkg/color-selected-feature/ColorSelectedFeature.less
+++ b/nextgisweb/webmap/nodepkg/color-selected-feature/ColorSelectedFeature.less
@@ -1,15 +1,20 @@
 .color-item {
-    padding: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 
     .change-item {
-        background-color: rgba(0, 0, 0, 0.02);
-        padding: 5px;
+        gap: 5px;
+        padding: 5px 0;
         border-radius: 4px;
-    }
+        display: inline-flex;
+        width: 100%;
+        align-items: center;
 
-    .default-item {
-        background-color: rgba(0, 0, 0, 0);
-        padding: 5px;
+        .item-label {
+            flex: none;
+            min-width: 25%;
+        }
     }
 
     .color-picker-item {
