--- a/nextgisweb/gui/nodepkg/focus-table/FocusTable.less
+++ b/nextgisweb/gui/nodepkg/focus-table/FocusTable.less
@@ -12,6 +12,10 @@
             overflow-y: auto;
             scrollbar-gutter: stable;
             scrollbar-width: thin;
+
+            .expand-all{
+                padding: 0 16px;
+            }
         }
     }
 
