style home page? complex tree

--- a/nextgisweb/gui/nodepkg/focus-table/FocusTable.less
+++ b/nextgisweb/gui/nodepkg/focus-table/FocusTable.less
@@ -10,7 +10,7 @@
             flex: 1;
             min-height: 0;
             overflow-y: auto;
-            scrollbar-gutter: stable;
+            scrollbar-gutter: auto;
             scrollbar-width: thin;
 
             .expand-all{
