style tiny display, popup fullscreen

--- a/nextgisweb/webmap/nodepkg/display/DisplayWidget.less
+++ b/nextgisweb/webmap/nodepkg/display/DisplayWidget.less
@@ -8,6 +8,10 @@ body {
     min-height: 0;
 }
 
+.ngw-webmap-display-tiny {
+    top: 0px !important;
+}
+
 .ngw-webmap-display {
     position: fixed;
     top: 40px;
