setting active panel webmap and style layer tree

--- a/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
@@ -51,7 +51,7 @@
     }
 
     .ant-tree-switcher-line-icon {
-        vertical-align: -0.2em;
+        color: var(--text-secondary);
     }
 
     .ant-tree-checkbox {
