Selected feature: the style of the layer and object name depends on whether the layer is enabled or not.

--- a/nextgisweb/webmap/nodepkg/panel/selected-feature/SelectedFeature.less
+++ b/nextgisweb/webmap/nodepkg/panel/selected-feature/SelectedFeature.less
@@ -126,6 +126,10 @@
                 width: 100%;
             }
 
+            .label-child-color-not-visible {
+                color: var(--text-secondary);
+            }
+
             .label-layer {
                 font-weight: 500;
             }
